estilo/mobile.css
@font-face {
    font-family: "tcc-regular";
    src: url(../fonts/TCCC-UnityText-Regular.ttf);
}

@font-face {
    font-family: "tcc-bold";
    src: url(../fonts/TCCC-UnityText-Bold.ttf);
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "tcc-regular", "arial";
    font-size: 1em;
}

header {
    padding: 15px;
    margin-bottom: 60px;
    padding-top: 50px;
    transition: 3s;
}

header div#menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

div#menu img {
    flex: 0 1 100px;
    margin-right: 10px;
    align-self: flex-start;
}

nav#navegacao {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    cursor: pointer;
}

nav#navegacao i#icone {
    font-size: 1.8em;
    margin-bottom: 10px;
}

ul#lista {
    display: none;
    list-style-type: none;
}

#lista > li {
    padding-bottom: 10px;
    text-align: start;
}

#lista > li > a {
    margin: auto;
    font-size: 1.5em;
    text-decoration: none;
    color: black;
    line-height: 2em;
}

#lista > li > a:hover {
    text-decoration: underline;
}

header a.botao {
    width: 40%;
    max-width: 300px;
    text-align: center;
    text-decoration: none;
    color: black;
    border: 1px solid black;
    border-radius: 30px;
    padding: 20px;
    transition: background-color 0.3s;
    margin-left: 10px;
    flex: 0 1 200px;
    align-self: flex-start;
}

header a.botao:hover {
    background-color: lightgrey;
    text-decoration: underline;
}

main {
    display: grid;
    grid-template: auto auto auto / 1fr;
    background-color: lightgrey;
}

section#principal {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    padding-top: 30px;
    padding-bottom: 100px;
}

div#imagem {
    width: 100%;
}

div#imagem > img {
    display: block;
    margin: auto;
    max-width: 1200px;
    width: 95%;
    border-radius: 30px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.281);
    transition: transform .7s ease-out, box-shadow .7s ease-out;
}

div#imagem > img:hover {
    transform: translateY(-8px) scale(1.05);
    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.281);
}

section#secundario {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    text-align: center;
    background-color: #4B3234;
    color: white;
}

section#secundario > h2 {
    font-family: "tcc-bold", Arial, Helvetica, sans-serif;
    font-size: 2.5em;
    margin: 30px;
}

section#secundario img {
    width: 100%;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.26);
    cursor: pointer;
    transition: transform .7s ease-out, box-shadow .7s ease-out;
}

section#secundario img:hover {
    transform: translateY(-8px) scale(1.05);
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.438);
    
}

#bloco-secundario {
    background-color: #753B4E;
    margin: auto;
    width: 80%;
    max-width: 500px;
    border-radius: 20px;
    overflow: hidden;
}

#bloco-secundario h3 {
    font-family: "tcc-bold", Arial, Helvetica, sans-serif;
    font-size: 1.5em;
    margin: 10px auto;
    width: 90%;
    margin-bottom: 30px;
}

#bloco-secundario p {
    width: 80%;
    margin: auto;
}

a#saibamais {
    display: block;
    margin: 30px auto;
    width: 60%;
    color: white;
    text-decoration: none;
    border: 1px solid rgb(255, 255, 255);
    border-radius: 50px;
    padding: 10px;
    margin-bottom: 50px;
    transition: background-color 0.5s;
}

a#saibamais:hover {
    background-color: #311114;
    text-decoration: underline;
}

section#secundario div#video {
    width: 90%;
    max-width: 1200px;
    margin: 60px auto;
    aspect-ratio: 16/9;
}
 
#video iframe {
    width: 100%;
    height: 100%;
    
}

section#terceiro {
    grid-row: -2 / -1;
    grid-column: 1 / 2;
    text-align: center;
}

section#terceiro > h2 {
    font-family: "tcc-bold", "arial";
    font-size: 2em;
    margin-top: 45px;
    margin-bottom: 45px;
    padding: 20px;
}

section#terceiro div#fotos {
    display: flex;
    flex-flow: column nowrap;
    gap: 20px;
    justify-content: center;
    align-items: center;
}

div#fotos img {
    width: 50%;
    max-width: 250px;
    border-radius: 30px;
    cursor: pointer;
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.219);
    transition: transform 0.5s ease-out, box-shadow 0.5s ease-out;
}

div#fotos img:hover {
    transform: translateY(-8px) scale(1.05);    
    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);

}

section#terceiro > a.botao {
    display: block;
    width: 70%;
    margin: 50px auto;
    padding: 20px;
    border: 1px solid black;
    border-radius: 30px;
    color: rgb(44, 44, 44);   
    text-decoration: none; 
    transition: background-color .7s ease, color .7s ease;
}

section#terceiro > a.botao:hover {
    background-color: black;
    color: white;
    text-decoration: underline;
}

footer {
    padding-top: 40px;
    background-color: black;
    color: white;
}

footer img {
    width: 100%;
    max-width: 150px;
    margin: 10px;
}

#linha {
    border-top: 1px solid white;
    margin: 20px 20px;
}

#informacoes {
    margin: 20px 20px;
    border-bottom: 1px solid rgb(255, 255, 255);
}

#informacoes h2 {
    font-size: 1.3em;
    padding-bottom: 30px;
    cursor: pointer;
}

#informacoes h2:hover {
    text-decoration: underline;
}

#rodape {
    padding: 20px 20px 90px 20px;
}

#rodape p {
    padding-bottom: 5px;
}

#rodape a {
    text-decoration: none;
    color: white;
}

#rodape a:hover {
    text-decoration: underline;
}

#rodape a#copy::after {
    content: " ©";
}


@media screen and (min-width: 975px) {

header div#menu {
    justify-content: space-evenly;
}

nav#navegacao i#icone {
    display: none;
}

ul#lista {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    width: 100%;
}

ul#lista li {
    margin-right: 20px;
}

footer {
    text-align: center;
}

}

